# nightfish_CE

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: on-pull-request.yml
curves/: Cargo.toml
curves/src/: ed_on_bls_12_377.rs  ed_on_bn254.rs  lib.rs
curves/src/ed_on_bls_12_381_bandersnatch/: mod.rs
curves/src/glv/: bn.rs  grumpkin.rs  mod.rs
curves/src/grumpkin/: dummy_pairing.rs  fields.rs  mod.rs  short_weierstrass.rs
curves/src/hash_to_curve/: mod.rs
plonk/: Cargo.toml  proof.txt  proof_fr.txt  vk.txt  vk_fr.txt  vk_hex.txt
plonk/benches/: bench.rs
plonk/examples/: test_smartcontract_verifier.rs
plonk/src/: constants.rs  errors.rs  lib.rs  testing_apis.rs
plonk/src/nightfall/: ipa_prover.rs  ipa_snark.rs  ipa_structs.rs  ipa_verifier.rs  mod.rs
plonk/src/nightfall/accumulation/: accumulation_structs.rs  mod.rs
plonk/src/nightfall/accumulation/circuit/: atomic_gadgets.rs  mod.rs  split_gadgets.rs  structs.rs
plonk/src/nightfall/circuit/: mod.rs  verify_ipa.rs  verify_zeromorph.rs
plonk/src/nightfall/circuit/plonk_partial_verifier/: gadgets.rs  mod.rs  poly.rs  proof_to_var.rs  scalars_and_bases.rs  structs.rs
plonk/src/nightfall/circuit/subroutine_verifiers/: gkr.rs  mod.rs  structs.rs  sumcheck.rs
plonk/src/nightfall/hops/: mod.rs  srs.rs  univariate_ipa.rs
plonk/src/nightfall/mle/: mle_structs.rs  mod.rs  snark.rs  utils.rs  virtual_polynomial.rs
plonk/src/nightfall/mle/subroutines/: gkr.rs  lookupcheck.rs  mod.rs  permutationcheck.rs  sumcheck.rs  zerocheck.rs
plonk/src/nightfall/mle/zeromorph/: mod.rs  zeromorph_protocol.rs
plonk/src/proof_system/: mod.rs  prover.rs  snark.rs  structs.rs  verifier.rs
plonk/src/recursion/: fs_domain.rs  merge_functions.rs  mod.rs
plonk/src/recursion/circuits/: atomic_acc.rs  challenges.rs  emulated_mle_arithmetic.rs  fft_arithmetic.rs  mle_arithmetic.rs  mod.rs  split_acc.rs
plonk/src/transcript/: mod.rs  rescue.rs  solidity.rs  standard.rs
primitives/: Cargo.toml
primitives/benches/: pcs.rs
primitives/src/: errors.rs  lib.rs  utils.rs
primitives/src/circuit/: commitment.rs  elgamal.rs  mod.rs
primitives/src/circuit/poseidon/: emulated.rs  mod.rs  native.rs  sponge.rs
primitives/src/circuit/rescue/: emulated.rs  mod.rs  native.rs  non_native.rs
primitives/src/circuit/sha256/: mod.rs
primitives/src/circuit/signature/: schnorr.rs
primitives/src/circuit/tree/: mod.rs  structs.rs
primitives/src/pcs/: errors.rs  mod.rs  poly.rs  prelude.rs  transcript.rs
primitives/src/pcs/multilinear_kzg/: batching.rs  mod.rs  srs.rs  util.rs
primitives/src/pcs/univariate_kzg/: mod.rs  ptau.rs  ptau_digests.rs  srs.rs
primitives/src/poseidon/: constants.rs  mod.rs  sponge.rs
primitives/src/rescue/: mod.rs  sponge.rs
primitives/src/rescue/rescue_constants/: bn254_base.rs
primitives/src/sha256/: constants.rs  mod.rs
primitives/src/signatures/: bls_over_bn254.rs
primitives/src/trees/: error.rs  imt.rs  mod.rs  timber.rs
relation/: Cargo.toml
relation/src/: constraint_system.rs  lib.rs
relation/src/gadgets/: arithmetic.rs  cmp.rs  emulated.rs  logic.rs  mod.rs  range.rs  utils.rs
relation/src/gadgets/ecc/: conversion.rs  emulated_scalar_msm.rs  glv.rs  mod.rs  msm.rs  root_unity_glv.rs
relation/src/gadgets/ecc/emulated/: short_weierstrass.rs  twisted_edwards.rs
relation/src/gadgets/ultraplonk/: lookup_table.rs  range.rs
relation/src/gates/: arithmetic.rs  ecc.rs  mod.rs
utilities/: Cargo.toml
utilities/src/: conversion.rs  lib.rs  par_utils.rs
