[workspace]
members = ["./primitives", "./plonk", "./relation", "./utilities", "./curves"]
resolver = "2"

[workspace.package]
version = "0.4.0-pre.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.70.0"
homepage = "https://github.com/EspressoSystems/jellyfish"
documentation = "https://jellyfish.docs.espressosys.com"
repository = "https://github.com/EspressoSystems/jellyfish"

[profile.test]
opt-level = 3

[profile.release]
debug = true
