[package]
name = "jf-plonk"
description = "UltraPlonk implementation"
# can change back to version.workspace = true after the following issue is fixed:
# https://github.com/DevinR528/cargo-sort/issues/47
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
byteorder = "1.5"
ark-std = "0.4.0"
dashmap = { version = "5.5.3" }
ark-ec = "0.4.2"
ark-ff = { version = "0.4.2", features = ["asm"] }
ark-poly = "0.4.2"
ark-serialize = "0.4.2"
derivative = { version = "2", features = ["use_core"] }
displaydoc = { version = "0.2.5", default-features = false }
downcast-rs = { version = "1.2.1", default-features = false }
dyn-clone = "^1.0"
espresso-systems-common = { git = "https://github.com/espressosystems/espresso-systems-common", tag = "0.4.0" }
hashbrown = "0.13.2"
itertools = { version = "0.10.5", default-features = false }
jf-primitives = { path = "../primitives", default-features = false, features = [
    "test-srs",
] }
jf-relation = { path = "../relation", default-features = false }
jf-utils = { path = "../utilities" }
merlin = { version = "3.0.0", default-features = false }
nf-curves = { path = "../curves" }
num-bigint = { version = "0.4", default-features = false }
num_enum = "0.7"
num-integer = "0.1.46"
rand_chacha = { version = "0.3.1", default-features = false }
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha3 = "^0.10"
tagged-base64 = "0.3.3"
ark-bn254 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [
    "sponge",
] }
rand = { version = "0.8", features = ["getrandom"] }


[dev-dependencies]
ark-bls12-377 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-bw6-761 = "0.4.0"
ark-ed-on-bls12-377 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
hex = "^0.4.3"
criterion = { version = "0.4", features = ["html_reports"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"

# Benchmarks
[[bench]]
name = "plonk-benches"
path = "benches/bench.rs"
harness = false
required-features = ["test-srs"]

[features]
default = ["parallel"]
std = [
    "ark-std/std",
    "ark-serialize/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-poly/std",
    "downcast-rs/std",
    "itertools/use_std",
    "jf-primitives/std",
    "jf-relation/std",
    "jf-utils/std",
    "num-bigint/std",
    "rand_chacha/std",
    "sha3/std",
]
test_apis = [] # exposing apis for testing purpose
parallel = [
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "jf-utils/parallel",
    "jf-relation/parallel",
    "jf-primitives/parallel",
    "dep:rayon",
]
test-srs = [
    "jf-primitives/test-srs",
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "jf-utils/parallel",
    "jf-relation/parallel",
    "jf-primitives/parallel",
    "dep:rayon",
]

[[example]]
name = "test_smartcontract_verifier"
path = "examples/test_smartcontract_verifier.rs"
required-features = ["test-srs"]
