[package]
name = "jf-relation"
description = "Jellyfish constraint system for PLONK"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-bls12-377 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-bw6-761 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = { version = "0.4.2", features = ["asm"] }
ark-poly = "0.4.2"
ark-serialize = "0.4.2"
ark-std = { version = "0.4.0", default-features = false }
derivative = { version = "2", features = ["use_core"] }
displaydoc = { version = "0.2.5", default-features = false }
downcast-rs = { version = "1.2.1", default-features = false }
dyn-clone = "^1.0"
hashbrown = "0.13.2"
itertools = { version = "0.10.5", default-features = false }
jf-utils = { path = "../utilities" }
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
rand_chacha = { version = "0.3.1" }
rayon = { version = "1.10.0", optional = true }
ark-ed-on-bls12-377 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
nf-curves = { path = "../curves" }
num-integer = "0.1.46"


[features]
default = ["parallel"]
std = [
        "ark-std/std",
        "ark-serialize/std",
        "ark-ff/std",
        "ark-ec/std",
        "ark-poly/std",
        "downcast-rs/std",
        "jf-utils/std",
        "num-bigint/std",
        "rand_chacha/std",
]
parallel = [
        "ark-ff/parallel",
        "ark-ec/parallel",
        "ark-poly/parallel",
        "jf-utils/parallel",
        "dep:rayon",
]
